design fixed and rules bag fixed commit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 2.Ваша цель собрать ряд или диагональ своих символов раньше соперника<br>
                 3.Первый игрок играет крестиком, второй ноликом<br>
                 4.Используйте панель справа для перемещения между ходами</span>
-            <script src="js/main.js"></script>
+            <script src="rules.js"></script>
             <div id="root"></div>
         </div>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -51,9 +51,14 @@
         <script src="game.js"></script>
 
     </div>
-    <footer class="footer_text">
-        <div class="content">Разработчик: Глеб Пантюшенко pantushenko11@gmail.com <div class="content" id="clock">
-                10:12:12</div>
+    <footer>
+        <div class="content">
+            <div class="info">
+                Разработчик: Глеб Пантюшенко pantushenko11@gmail.com
+            </div>
+            <div class="content" id="clock">
+                10:12:12
+            </div>
         </div>
         <script src="clock.js"></script>
     </footer>
